--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,3 +4,10 @@
         <app-slideshow [movies]="movies"></app-slideshow>
     </div>
 </div>
+
+<h1 class="mt-5">Películas</h1>
+
+<app-peliculas-poster-grid 
+    *ngIf="movies.length > 0" 
+    [movies]="movies">
+</app-peliculas-poster-grid>
