--- a/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
+++ b/src/app/components/peliculas-poster-grid/peliculas-poster-grid.component.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-3 mb-5" *ngFor="let movie of movies">
-        <img src="https://image.tmdb.org/t/p/w500{{ movie.poster_path }}" class="img-fluid rounded">
+        <img [src]="movie.poster_path | poster" class="img-fluid rounded">
         <div>
             <h3> {{ movie.title }} </h3>
             <div class="row">
