--- a/src/app/pages/pelicula/pelicula.component.html
+++ b/src/app/pages/pelicula/pelicula.component.html
@@ -1,1 +1,42 @@
-<p>pelicula works!</p>
+<div class="row mt-5" *ngIf="pelicula">
+    <div class="col-md-6">
+        <img [src]="pelicula.poster_path | poster"
+             class="img-thumbnail"
+             [alt]="pelicula.title">
+    </div>
+    <div class="col-md-6">
+        <h3> {{pelicula.title}} </h3>
+        <div class="row">
+            <div class="col">
+                <star-rating [value]="pelicula.vote_average" 
+                            totalstars="10" 
+                            checkedcolor="yellow" 
+                            uncheckedcolor="grey" 
+                            size="14px"
+                            readonly="false"></star-rating>
+            </div>
+            <div class="col">
+                {{ pelicula.vote_average }}
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-white text-justify">
+                {{ pelicula.overview }}
+            </div>
+        </div>
+        <div class="row mt-5">
+            <div class="col text-right">
+                <button class="btn btn-outline-info"
+                    (click)="onRegresar()">
+                    Regresar
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row mt-3 mb-5" *ngIf="cast" >
+    <div class="col">
+        <app-cast-slideshow [cast]="cast"></app-cast-slideshow>
+    </div>
+</div>
